# eks-gpu

./: .env.example  .gitignore  CLAUDE.md  README.md  eks-nvidia-tools  eks-nvidia-tools-local  eks_ami_parser.py  eks_nvidia_alignment.py  install-wrapper.sh  install.sh  run_tests.py  test-results.txt  test_fixes.py  test_integration.py  test_phase2_models.py  test_phase3_utils.py  update_dockerfile_with_nvidia_driver.py
core/: __init__.py  ami_resolver.py  eks_client.py  github_client.py  html_parser.py
docs/: eks-nodegroup-plan.md  eks-nodegroups-al2023-arm-guide.md
eks-cloudwatch-monitor/: README.md  iam-policy.json  pyproject.toml
eks-cloudwatch-monitor/eks_monitor/: __init__.py  cli.py  cloudwatch_client.py
eks-cloudwatch-monitor/eks_monitor/metrics/: __init__.py  node_metrics.py  pod_metrics.py  workload_metrics.py
eks-cloudwatch-monitor/eks_monitor/reports/: __init__.py  json_report.py
eks_nvidia_tools/: __init__.py
eks_nvidia_tools/cli/: __init__.py  main.py
eks_nvidia_tools/cli/commands/: __init__.py  align_command.py  inspect_command.py  parse_command.py  search_command.py  template_command.py  version_command.py
eks_nvidia_tools/cli/legacy/: __init__.py  alignment_wrapper.py  ami_parser_wrapper.py
eks_nvidia_tools/cli/shared/: __init__.py  arguments.py  output.py  progress.py  validation.py
models/: __init__.py  ami_types.py  driver_alignment.py  nodegroup_config.py
templates/: nodegroup_template.json
utils/: __init__.py  architecture_utils.py  naming_utils.py  path_utils.py  template_utils.py  version_utils.py
