[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eks-cloudwatch-monitor"
version = "0.1.0"
description = "Analyze EKS cluster resource utilization via CloudWatch Container Insights"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jeremy Rossi"}
]
dependencies = [
    "boto3>=1.26.0",
]

[project.scripts]
eks-monitor = "eks_monitor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
